--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/three": "^0.181.0",
     "autoprefixer": "^10.4.22",
     "framer-motion": "^12.23.24",
